[gd_scene load_steps=4 format=2]

[ext_resource path="res://other/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://objects/title/Feedback.gd" type="Script" id=2]
[ext_resource path="res://fonts/FontVerdanaSmall.tres" type="DynamicFont" id=3]

[node name="Feedback" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -39.0

[node name="Text" type="RichTextLabel" parent="Margin"]
margin_right = 354.0
margin_bottom = 157.0
custom_fonts/normal_font = ExtResource( 3 )
custom_constants/line_separation = 5
bbcode_enabled = true
bbcode_text = "Test Message"
text = "Test Message"

[node name="HBox" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -260.0
margin_top = -31.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 1 )

[node name="Mail" type="Button" parent="HBox"]
margin_right = 100.0
margin_bottom = 21.0
text = "Open Mail Client"

[node name="Clip" type="Button" parent="HBox"]
margin_left = 104.0
margin_right = 213.0
margin_bottom = 21.0
text = "Copy To Clipboard"

[node name="Close" type="Button" parent="HBox"]
margin_left = 217.0
margin_right = 250.0
margin_bottom = 21.0
theme = ExtResource( 1 )
text = "Back"

[node name="Tween" type="Tween" parent="."]

[node name="Copied" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = -25.0
margin_right = 55.0
margin_bottom = -13.0
text = "Copied!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="visibility_changed" from="." to="." method="_on_Feedback_visibility_changed"]
[connection signal="button_up" from="HBox/Mail" to="." method="_on_Mail_button_up"]
[connection signal="button_up" from="HBox/Clip" to="." method="_on_Clip_button_up"]
[connection signal="button_up" from="HBox/Close" to="." method="_on_Close_button_up"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
